--- a/res/layout/fragment_page_goods_list.xml
+++ b/res/layout/fragment_page_goods_list.xml
@@ -17,6 +17,13 @@
             android:textColor="@android:color/white"
             android:background="#1F5B8D"
             android:textSize="20sp" />
+        <ImageView 
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/ivRefresh"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="15dp"
+            />
                   
     </FrameLayout>
 
