--- a/res/layout/widget_goods_detail.xml
+++ b/res/layout/widget_goods_detail.xml
@@ -254,7 +254,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_margin="5dp"
-            android:background="@drawable/back" />
+            android:background="@drawable/comment_back" />
 
         <EditText
             android:id="@+id/editComment"
