--- a/res/layout/fragment_page_search.xml
+++ b/res/layout/fragment_page_search.xml
@@ -18,13 +18,13 @@
             android:padding="10dp"
             android:id="@+id/etSearch"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             />
        <ImageView 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/search"
-           android:layout_marginEnd="15dp"
+           android:layout_marginRight="15dp"
            android:id="@+id/ivSearch"
            android:layout_gravity="right|center_vertical"
            />
