--- a/res/layout/activity_buy_order_details.xml
+++ b/res/layout/activity_buy_order_details.xml
@@ -237,12 +237,23 @@
             android:layout_marginLeft="30dp"
             android:background="@android:color/holo_blue_bright"
             android:textSize="12sp"
+            android:visibility="gone"
             android:text="查看评价" />
+        <Button
+            android:id="@+id/btnGotoComment"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="30dp"
+            android:background="@android:color/holo_blue_bright"
+            android:textSize="12sp"
+            android:visibility="gone"
+            android:text="去评价" />
          <Button
             android:id="@+id/btnConfirm"
             android:layout_width="80dp"
             android:layout_height="30dp"
             android:layout_marginLeft="30dp"
+            android:visibility="gone"
             android:background="@android:color/holo_blue_bright"
             android:textSize="12sp"
             android:text="确认收货" />
